# lcd1602

./: CMakeLists.txt  LICENSE  README.md  helpers.h  idf_component.yml  lcd1602.c  lcd1602_private.h  lcd1602_protocol.h
.github/workflows/: cmake-multi-platform.yml
esp-idf/: .gitignore  CMakeLists.txt  Makefile  idf_component.yml
esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  helpers.h  main.c
examples/esp-idf/: CMakeLists.txt
examples/esp-idf/main/: main.c
examples/linux/: CMakeLists.txt  main.c
include/: lcd1602.h
include/lcd1602/: lcd1602.h  sys_esp.h  sys_linux.h
lib/: esp-idf.c  helpers.h  lcd1602.c  lcd1602_private.h  lcd1602_protocol.h  linux.c  sys.h
lowlevel/: esp-idf.c  linux.c
test/: CMakeLists.txt  main.c
